added logs
